hphp/hack/test/typecheck/constraints/contravariance_constraint_bad_2.php.exp
ERROR: File "contravariance_constraint_bad_2.php", line 43, characters 12-13:
Invalid return type (Typing[4110])
  File "contravariance_constraint_bad_2.php", line 14, characters 17-19:
  Expected `NAC\AAA`
  File "contravariance_constraint_bad_2.php", line 14, characters 40-40:
    via this generic `T`
  File "contravariance_constraint_bad_2.php", line 37, characters 33-33:
  But got `NAC\BBB`
  File "contravariance_constraint_bad_2.php", line 37, characters 33-33:
  This type argument to `NAC\CONTRA` only allows supertypes (it is contravariant)
  File "contravariance_constraint_bad_2.php", line 36, characters 16-18:
    by the definition of `T`
ERROR: File "contravariance_constraint_bad_2.php", line 43, characters 12-13:
Invalid return type (Typing[4110])
  File "contravariance_constraint_bad_2.php", line 14, characters 17-19:
  Expected `NAC\AAA`
  File "contravariance_constraint_bad_2.php", line 14, characters 40-40:
    via this generic `T`
  File "contravariance_constraint_bad_2.php", line 37, characters 33-33:
  But got `T as NAC\BBB`
  File "contravariance_constraint_bad_2.php", line 37, characters 33-33:
  This type argument to `NAC\CONTRA` only allows supertypes (it is contravariant)
